Ajustes style.css clase presupuesto y color de body

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Estilos -->
+   <!--bootstrap CSS-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
+  <!--styles CSS-->
   <link rel="stylesheet" href="assets/css/styles.css">
 
   <!-- Google Fonts -->
@@ -90,9 +93,14 @@
   </div>
 
   <!-- Scripts -->
+   <!--bootstrap JS-->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
+
+  <!--main JS-->
   <script src="assets/js/main.js"></script>
   <script src="https://kit.fontawesome.com/384e997431.js" crossorigin="anonymous"></script>
+
+  <!-- SweetAlert2 JS -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
