Desafio 2 aplicacion web

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Registro de Transacciones</title>
+  <title>Desafio N°2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Estilos -->
